# DocGPT-2

./: .gitignore  .replit  README.md  main.py  prompt.txt  pyproject.toml  requirements.txt  test3.py
.streamlit/: config.toml
