[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
openai = "^1.35.14"
streamlit = "^1.36.0"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
streamlit-extras = "^0.4.3"
geopy = "^2.4.1"
pydeck = "^0.9.1"
gdown = "^5.2.0"
streamlit-modal = "^0.1.2"
streamlit-mic-recorder = "^0.0.8"
streamlit-js-eval = "^0.1.7"
streamlit-folium = "^0.21.1"
langchain-core = "^0.2.21"
langchain-openai = "^0.1.17"
python-dotenv = "^1.0.1"
folium = "^0.17.0"
langchain = "^0.2.9"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"